Fix issue 2817 - us backlog drag position at start
- Before when the user clicked on the left of a backlog US, the US position try to reach the drag icon.
- Now when the US starts dragging preserve their position and if you move it to the sprint the US overflowing the X without scroll.

--- a/app/styles/core/base.scss
+++ b/app/styles/core/base.scss
@@ -33,6 +33,10 @@ body {
     overflow: hidden;
 }
 
+.drag-active {
+    overflow-x: hidden;
+}
+
 .master {
     background: $white;
     height: 100%;
